wip: adding swagger docs.
